tests/invalid/repr_wrong_arg_count/main.py
x: str = repr(1, 2)
